--- a/configs/templates/multivariate_map.yml
+++ b/configs/templates/multivariate_map.yml
@@ -15,3 +15,13 @@ eval:
   test_path: data/test.pickle
   metrics:
     - accuracy
+    - f1_score
+    - precision
+    - recall
+    - roc_auc
+
+test:
+  type: basic
+  test_path: data/test.pickle
+
+runner: kfold
