--- a/configs/grid_search/multivariate_map.yml
+++ b/configs/grid_search/multivariate_map.yml
@@ -1,3 +1,3 @@
 config: configs/templates/multivariate_map.yml
 search:
-  model.params.L: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  model.params.L: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 30, 50, 100, 200]
